<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/city_background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing"
        android:background="@color/lightblue"
        android:weightSum="11">

        <!-- Name Label -->
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Full Name" />
        <!-- Name Label -->
        <EditText android:id="@+id/input_jobtitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Profession" />
        <!-- Name Label -->
        <EditText android:id="@+id/input_companyname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Company Name" />
            <!-- Address Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">
            <EditText android:id="@+id/input_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:inputType="textPostalAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Work Address" />
            <!-- Address Button -->
            <Button
                android:id="@+id/button"
                android:layout_width="@dimen/signoutbtn"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/ic_edit_location"
                />
        </LinearLayout>
           <!--Website-->
        <EditText
            android:id="@+id/input_web"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="Website"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textWebEditText"/>
        <!--  Email Label -->
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Email" />
        <!--work number-->
            <EditText android:id="@+id/input_telephone"
            android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
            android:hint="Work Telephone" />
        <!-- mobile number -->
            <EditText android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Mobile Number" />

        <!-- Password Label -->
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Password"/>

        <!-- Password Confirm Label -->
            <EditText android:id="@+id/input_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Confirm Password"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize"
            android:onClick="addUser"
            android:drawableRight="@drawable/ic_add_person"
            android:text="@string/create_account"
            />

    </LinearLayout>
</LinearLayout>