...
                android:text="@string/loginemailbanner"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                />
            <EditText
                android:id="@+id/emaillogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginemail"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"/>
...
                android:textColor="@color/white"
                android:text="@string/loginpasswordbanner"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                />
            <EditText
                android:id="@+id/passwordlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/loginpassword"
                android:inputType="textPassword"/>
...
