...
                android:textStyle="bold"
                android:padding="@dimen/minpadding"
                android:drawableTop="@drawable/ic_manage_card"
                android:onClick="openManageCards"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="3"
            android:background="@drawable/profile_border"
            android:padding="@dimen/minpadding"
...
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical">
                <Button
                    android:id="@+id/btn_signout"
                    android:layout_width="@dimen/signoutbtn"
                    android:layout_height="@dimen/signoutbtn"
                    android:background="@drawable/ic_sign_out"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
...
